    Higher-Priority Blocks for Lower-Priority Blocks. (Derek Dagit via
    Kihwal Lee)

    HDFS-9063. Correctly handle snapshot path for getContentSummary. (jing9)

    HDFS-9273. ACLs on root directory may be lost after NN restart.
    (Xiao Chen via cnauroth)

    HDFS-9142. Separating Configuration object for namenode(s) in
    MiniDFSCluster. (Siqi Li via mingma)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

    HDFS-8867. Enable optimized block reports. (Daryn Sharp via jing9)

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via yliu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on reconnect.
    (Kihwal Lee via yliu)

    HDFS-8384. Allow NN to startup if there are files having a lease but are not
    under construction. (jing9)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked bad.
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for append fails
    due to incorrect checksum (Jing Zhao via kihwal)

    HDFS-9305. Delayed heartbeat processing causes storm of subsequent
    heartbeats. (Arpit Agarwal)

    HDFS-9083. Replication violates block placement policy (Rushabh Shah)

    HDFS-7725. Incorrect "nodes in service" metrics caused all writes to fail.
    (Ming Ma via wang)

Release 2.7.1 - 2015-07-06

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8081. Split getAdditionalBlock() into two methods. (shv)

    HDFS-7931. DistributedFileSystem should not look for keyProvider in
    cache if Encryption is disabled (asuresh)

    HDFS-7933. fsck should also report decommissioning replicas.
    (Xiaoyu Yao via cnauroth)

    HDFS-7990. IBR delete ack should not be delayed. (daryn via kihwal)

    HDFS-8204. Mover/Balancer should not schedule two replicas to the same
    datanode.  (Walter Su via szetszwo)
